add github activity calendar

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,10 @@ html {
   --imp-text-color: #c770f0;
 }
 
+body {
+  color: white;
+}
+
 .purple {
   color: var(--imp-text-color) !important;
 }
@@ -449,6 +453,7 @@ button:focus {
   padding-top: 150px !important;
   padding-bottom: 30px !important;
   background-image: var(--section-background-color) !important;
+  color: white !important;
 }
 
 .project-card {
